--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,8 +7,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta name="description" content="Social Media app developed using django">
+    <meta name="author" content="Sahil Adhikari, Aditya Verma, Sonakshi, Mufeeda">
 	<title>Profile - {{user_profile.user.username}}</title>
    <!-- <link rel="icon" href="images/fav.png" type="image/png" sizes="16x16"> -->
     
