--- a/templates/search.html
+++ b/templates/search.html
@@ -10,6 +10,8 @@
     <link href="favicon.png" rel="icon" type="image/png">
     <title>Search</title>
     <meta charset="utf-8">
+    <meta name="description" content="Social Media app developed using django">
+    <meta name="author" content="Sahil Adhikari, Aditya Verma, Sonakshi, Mufeeda">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'assets/css/icons.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/uikit.css' %}">
