--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,6 +11,8 @@
     <link href="{% static 'assets/images/favicon.png' %}" rel="icon" type="image/png">
     <title>Sign Up - Socialgram</title>
     <meta charset="utf-8">
+    <meta name="description" content="Social Media app developed using django">
+    <meta name="author" content="Sahil Adhikari, Aditya Verma, Sonakshi, Mufeeda">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'assets/css/icons.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/uikit.css' %}">
