--- a/templates/search.html
+++ b/templates/search.html
@@ -69,7 +69,7 @@
     
                             <!-- notivication header -->
                             <div class="px-4 py-3 -mx-5 -mt-4 mb-5 border-b">
-                                <h4>Upload Pics or Videos</h4>
+                                <h4>Upload Images or Videos</h4>
                             </div>
     
                             <!-- notification contents -->
@@ -84,11 +84,11 @@
                                         </svg>
                                     </div>
 
-                                    <p class="my-3 leading-6"> Upload pics ..
+                                    <p class="my-3 leading-6"> Upload Images ..
                                     </p>
                                     <div uk-form-custom>
                                         <input type="file">
-                                        <a href="#" class="button soft-warning small"> Choose pics</a>
+                                        <a href="#" class="button soft-warning small"> Choose Images</a>
                                     </div>
     
                                     <a href="#" class="uk-text-muted mt-3 uk-link"
