--- a/templates/signin.html
+++ b/templates/signin.html
@@ -96,7 +96,7 @@
                     <a href="#"> Terms</a>
                     <a href="#"> Privacy</a>
                 </div>
-                <p class="capitalize"> © copyright 2023 by social</p>
+                <p class="capitalize"> © copyright 2023 by Sahil Adhikari, Aditya Verma</p>
             </div>
         </div>
 
