--- a/templates/setting.html
+++ b/templates/setting.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static 'assets/images/favicon.png' %}" rel="icon" type="image/png">
-    <title>Settings</title>
+    <title>Settings - Socialgram</title>
     <meta charset="utf-8">
     <meta name="description" content="Social Media app developed using django">
     <meta name="author" content="Sahil Adhikari, Aditya Verma, Sonakshi, Mufeeda">
