--- a/templates/search.html
+++ b/templates/search.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="favicon.png" rel="icon" type="image/png">
-    <title>Search</title>
+    <title>Search - Socialgram</title>
     <meta charset="utf-8">
     <meta name="description" content="Social Media app developed using django">
     <meta name="author" content="Sahil Adhikari, Aditya Verma, Sonakshi, Mufeeda">
