--- a/templates/search.html
+++ b/templates/search.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    {% include "navbar.html" %}
             <form action="search" method="POST">
             {% csrf_token %}
             <header style="margin-top: -23px;">
